src/main/webapp/styles/app.css
html {
	overflow-x: hidden;

}

html, body {
	width: 100%;
	height: 100%;
	text-align: -webkit-center;
	margin: 0px;
}

.top-banner-view {
	height: 80px;
	transition: margin-top 1s;
	position: absolute;
	width: 100%;
	background: url("../images/banner-bg.jpg");
}

.animate-height {
	transition: height 1s;
}

.top-banner {
	width: 100%;
	height: 80px;
	background: #fff;
	position: fixed;
	padding: 0px;
	box-shadow: 1px -5px 40px #000000;
	z-index: 16;
	background: url("../images/banner-bg.jpg");
	/*   background: linear-gradient(rgb(247, 231, 204),rgba(211, 180, 78, 0.95),rgb(209, 170, 61));
    border-bottom-left-radius: 120px;
    border-bottom-right-radius: 120px;*/
}

.top-banner div:nth-child(1) {
	margin-top: 4px;
	text-align: left;
	padding-left: 100px;
}

.top-banner div:nth-child(2) {
	margin-top: -8px;
	margin-left: 60px;
	text-align: -webkit-right;
}

.top-banner-menu {
	margin-top: -8px;
}

.app-download, .top-banner-menu {
	text-align: -webkit-auto;
	padding: 40px;
}

.top-banner-menu a, .top-banner-menu a:hover {
	text-decoration: none;
	color: #fff;
	font-weight: bold;
}

.app-download a, .top-banner-menu a {
	padding: 0px 5px;
}

.top-banner-menu h6, .app-download h6 {
	padding: 0px;
	display: inline;
	font-weight: 600;
}

.top-banner-menu h5 {
	display: inline;
	padding: 25px 0 0;
	cursor: pointer;
}

.app-download a img {
	border-radius: 15px;
	border: 1px solid rgb(255, 255, 255);
	cursor: pointer;
}

.app-download a img:hover {
	background: rgba(255, 255, 255, 0.56);
	border: 1px solid rgba(255, 255, 255, 0.56) !important;
}

.app-view {
	width: 100%;
	margin-top: 80px;
	text-align: center;
	display: inline-block;
	min-height: 500px;
}

.app-view .partials {
	height: 100%;
	background: linear-gradient(to top, rgba(255, 0, 0, 0),
		rgba(255, 235, 0, 0.41));
}

.registeration {
	background: url("../images/banner-bg.jpg");
	height: calc(100% - 92px);
	display: inline-table;
	padding-top: 20px;
}

.carousal {
	width: 50%;
	height: 100%;
	float: left;
}

.register{
	position: relative;
}
.reg-form {
	/*background: #F8F8FF;*/
	background: rgba(240, 230, 140, 0.58);
	border-radius: 10px;
	/* float: right;
	margin: 0px 55px 0 200px; */
}

.reg-form input, .reg-form select, .reg-form input[type="text"],
	.better-half-search .search-options .search-category input,
	.better-half-search .search-options .search-category select {
	border: 1px solid rgba(27, 26, 26, 0.19);
	border-radius: 10px;
	padding: 5px 5px;
	font-size: 12px;
	height: 31px;
	margin: 6px 0px;
	outline: none;
	background: whitesmoke;
}

.form-header {
	text-align: center;
	padding: 15px;
}

.form-header span {
	color: #ffa800;
	font-weight: bold;
}

.form-header h5 {
	display: inline;
}

.radio-div {
	text-align: center;
	padding: 5px 10px;
	font-size: 12px;
}

.radio-div input[type="radio"] {
	width: 12;
	margin-top: -8px;
}

.dob {
	text-align: center;
}

.dob span {
	padding: 15px;
	font-size: 12px;
}

.dob .month {
	margin: 5px 5px 5px 5px !important;
}

.dob .year {
	width: 18%;
}

.phone-no input:nth-child(2) {
	margin-left: 5px;
}

.register-opt {
	text-align: center;
	padding: 5px 10px;
	font-size: 12px;
}

.register-opt button, .better-half-search .search-options .search-category button
	{
	background-color: #ffa800;
	padding: 5px 50px;
	color: #fff;
	border-style: none;
	border-radius: 20px;
	margin: 10px 0px 0px;
	border-bottom: 3px solid #ffa800;
	outline: none;
}

.register-opt span {
	color: #ffa800;
	font-weight: bold;
}

.register-opt img {
	cursor: pointer;
}

.better-half-search {
	display: inline-table;
}

.better-half-search .title, .about .title, .reviews .title {
	padding: 30px;
}

.better-half-search .title span, .about .title span, .reviews .title span
	{
	font-weight: bold;
	font-size: 25px;
}

.better-half-search .title span:nth-child(2), .about .title span:nth-child(2),
	.reviews .title span:nth-child(2) {
	color: #ffa800;
}

.marriage-quote {
	font-size: 14px;
	padding: 25px;
	color: rgb(105, 101, 101);
}

.better-half-search .search-options {
	padding: 25px;
}

.better-half-search .search-options img {
	width: 60px;
}

.better-half-search .search-options input[type="radio"] {
	margin: 45px 0px 0px -33px;
	width: 10px;
	cursor: pointer;
}

.better-half-search .search-options label:nth-child(1) {
	border-right: 1px solid rgba(128, 128, 128, 0.43);
	padding-right: 25px;
}

.better-half-search .search-options label:nth-child(2) {
	padding-left: 10px;
}

.better-half-search .search-options .search-category {
	padding: 30px;
}

.nav-options {
	background: url("../images/proces-bg.png");
	display: inline-table;
	padding: 30px;
}

.nav-options .options div {
	float: left;
}

.nav-options .options div span {
	font-weight: bold;
	font-size: 14px;
	color: rgba(184, 134, 11, 0.72);
}

.about, .reviews, .footer-div {
	display: inline-table;
}

.about-content {
	padding: 14px;
}

.portfolio {
	padding: 45px;
}

.portfolio div {
	float: left;
}

.portfolio div span {
	font-weight: bold;
	font-size: 14px;
}

.reviews {
	background: linear-gradient(to top, rgba(255, 0, 0, 0),
		rgba(255, 235, 0, 0.41));
	background: -webkit-linear-gradient(to top, rgba(255, 0, 0, 0),
		rgba(255, 235, 0, 0.41));
	background: -o-linear-gradient(to top, rgba(255, 0, 0, 0),
		rgba(255, 235, 0, 0.41));
	background: -moz-linear-gradient(to top, rgba(255, 0, 0, 0),
		rgba(255, 235, 0, 0.41));
	padding: 20px;
}

.carousal-reviews {
	padding: 20px;
}

.carousal-reviews table tr td {
	text-align: -webkit-center;
	font-size: 14px;
}

.carousal-reviews table tr td img {
	border-radius: 200px;
	max-width: 120px;
	margin-top: 20px;
}

.carousal-reviews table tr td span {
	font-size: 24px;
}

.carousal-reviews .carousel-indicators {
	display: none;
}

.footer-view {
	height: 86%;
}

.know-more {
	background-image: url('../images/banner-bg.jpg');
	background-repeat: no-repeat;
	height: 30%;
	padding: 50px;
}

.know-more h2 {
	display: inline;
	color: #fff;
	padding: 0px 50px;
}
/* ... */

